--- a/src/app/navigation/navigation.less
+++ b/src/app/navigation/navigation.less
@@ -8,14 +8,14 @@
   width: @sidebar-width;
   background: linear-gradient(0deg, #3472F7 0%, #3472F7 100%);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  z-index: 1030;
+  z-index: 1060;
   overflow-y: auto;
   transition: @transition-base;
   display: flex;
   flex-direction: column;
 
   .nav-header {
-    padding: 20px 15px 0;
+    padding: 10px 15px 10px;
     position: relative;
     
     h2 {
