--- a/src/app/users/users.less
+++ b/src/app/users/users.less
@@ -31,6 +31,16 @@
         }
       }
 
+      .create-button {
+        .btn;
+        .btn-success;
+        background: #27ae60;
+        
+        &:hover {
+          background: #229954;
+        }
+      }
+
       .add-button {
         .btn;
         .btn-success;
@@ -248,6 +258,9 @@
                 color: @primary-color;
                 margin: 0 0 0.5rem 0;
                 font-weight: 500;
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
               }
 
               .user-badges {
@@ -695,6 +708,25 @@
           }
         }
       }
+    }
+  }
+
+  // Email validation icons
+  .email-validation-icon {
+    display: inline-block;
+    font-size: 1rem;
+    margin-left: 0.25rem;
+    
+    &.email-validation-verified {
+      color: #27ae60;
+    }
+    
+    &.email-validation-unverified {
+      color: #f39c12;
+    }
+    
+    &.email-validation-unknown {
+      color: #95a5a6;
     }
   }
 }
