--- a/src/app/user-menu/user-menu.less
+++ b/src/app/user-menu/user-menu.less
@@ -54,10 +54,10 @@
   color: #374151;
   font-size: 0.875rem;
   font-weight: 500;
-  truncate: true;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 140px;
 }
 
 .chevron {
