--- a/src/app/users/users.html
+++ b/src/app/users/users.html
@@ -2,9 +2,9 @@
   <header class="page-header">
     <h1>Users</h1>
     <div class="header-actions">
-      <button class="invite-button" (click)="openInviteForm()">
+      <!-- <button class="invite-button" (click)="openInviteForm()">
         ✉️ Invite User
-      </button>
+      </button> -->
       @if (isCurrentUserAdmin()) {
         <button class="create-button" (click)="openCreateForm()">
           👤 Create User
